# scopehal-apps

./: CMakeLists.txt
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows-clang.yml
cmake/: FindFFTS.cmake
src/examples/curvetrace/: CMakeLists.txt
src/examples/impulse/: CMakeLists.txt
src/examples/scopevna/: CMakeLists.txt
src/examples/usbcsv/: CMakeLists.txt
src/glscopeclient/: CMakeLists.txt  PreferenceTree.h  ScopeSyncWizard.cpp  ScopeSyncWizard.h
src/ngscopeclient/: CMakeLists.txt  VulkanWindow.cpp  ngscopeclient.h
tests/Acceleration/: Buffers.cpp  CMakeLists.txt  main.cpp
tests/Filters/: CMakeLists.txt  Filter_DeEmbed.cpp  Filter_FFT.cpp  Filter_FIR.cpp  Filter_Subtract.cpp  Filter_Upsample.cpp  FrequencyMeasurement.cpp  main.cpp
tests/Primitives/: BlackmanHarrisWindow.cpp  CMakeLists.txt  Convert16BitSamples.cpp  Convert8BitSamples.cpp  Sampling.cpp  main.cpp
